--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
+    "rc-collapse": "^1.6.4",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
