--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-stage-1": "^6.5.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "classnames": "^2.2.5",
     "cors": "^2.7.1",
     "express": "^4.14.0",
     "express-history-api-fallback": "^2.0.0",
@@ -39,6 +40,8 @@
     "redux": "^3.0.4",
     "redux-form": "^5.3.1",
     "redux-thunk": "^2.1.0",
+    "scroll-to-y": "git://github.com/daviferreira/scroll-to-y.git",
+    "scrollreveal": "^3.3.1",
     "webpack": "^1.10.1",
     "webpack-dev-server": "^1.14.1"
   },
@@ -53,6 +56,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-nodemon": "^2.1.0",
     "nodemon": "^1.9.2",
+    "react-router-redux": "^4.0.5",
     "webpack": "^1.10.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
