--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.5",
     "redux": "^3.0.4",
     "redux-form": "^5.3.1",
     "redux-thunk": "^2.1.0",
